# SnapAppDemo

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: lib.rs  main.rs  models.rs  router.rs  state.rs
tests/: integration_test.rs
