[package]
name = "snap_app_demo"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web framework that focuses on ergonomics and modularity.
axum = "~0.7.0"

# Event-driven, non-blocking I/O platform.
tokio = { version = "~1.39.3", features = ["full"] }

# A serialization/deserialization framework.
serde = { version = "1.0.209", features = ["derive"] }

# Serde serializion/deserialization of JSON data.
serde_json = "1.0.127"

# Date and time library for Rust.
chrono = "0.4.38"

[dev-dependencies]

# Tower is a library of modular and reusable components for building robust networking clients and servers.
tower = { version = "0.5.0", features = ["util"] }
http-body-util = "0.1.2"


