[package]
name = "snap_app_demo"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web framework that focuses on ergonomics and modularity.
axum = "~0.7.0"

# Event-driven, non-blocking I/O platform.
tokio = { version = "~1.39.3", features = ["full"] }

# A serialization/deserialization framework.
serde = { version = "1.0.209", features = ["derive"] }

# Serde serializion/deserialization of JSON data.
serde_json = "1.0.127"

# Date and time library for Rust.
chrono = "0.4.38"

# A library to generate and parse UUIDs.
uuid = { version = "1.10.0", features = [
    "v4",               # Lets you generate random UUIDs
    "fast-rng",         # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics",# Enable better diagnostics for compile-time UUIDs
] }

[dev-dependencies]

# Tower is a library of modular and reusable components for building robust networking clients and servers.
tower = { version = "0.5.0", features = ["util"] }

http-body-util = "0.1.2"

# A fast and correct HTTP library.
hyper = { version = "1.4.1", features = ["full"] }

hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
